--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^5.0.2
+  firebase_core: ^3.1.1
+  firebase_crashlytics: ^4.0.2
   flutter:
     sdk: flutter
 
