--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,8 @@ dependencies:
   firebase_crashlytics: ^4.0.2
   flutter:
     sdk: flutter
-
+  flutter_animate:
+  flutter_splash_screen:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -67,6 +68,7 @@ flutter:
    - assets/violet.png
    - assets/logo.png
    - assets/SZAPKI_ENLIGHTENED.png
+   - assets/ciastko.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
